cmake_minimum_required(VERSION 3.19)
project(Second_Year_Final_Assignment)

set(CMAKE_CXX_STANDARD 14)

add_executable(Second_Year_Final_Assignment main.cpp CSquare.cpp CSquare.h Properties.cpp Properties.h Player.cpp Player.h Jail.cpp Jail.h GoToJail.cpp GoToJail.h FreeParking.cpp FreeParking.h Station.cpp Station.h)